--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
   </div>
 
   <section class="about">
-    <h2>About Me</h2>
-    <p>ここに自己紹介の文章を書きます...</p>
+    <h2>About Us</h2>
+    <p>ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。</p>
   </section>
 
   <section class="news">
-    <h2>News</h2>
+    <h2>News & Topics</h2>
     <div class="news-container">
-      <div class="news-item">ニュース1...</div>
-      <div class="news-item">ニュース2...</div>
-      <div class="news-item">ニュース3...</div>
-      <!-- 追加のニュース項目 -->
+      <ul>
+        <li>ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。(20xx.xx.xx)</li>
+        <li>ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。(20xx.xx.xx)</li>
+        <li>ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。ここに文章が入ります。(20xx.xx.xx)</li>
+        <!-- 追加のニュース項目 -->
+      </ul>
     </div>
   </section>
 
