--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <div class="header-right">
         <a href="profile.html">Profile</a>
         <a href="cv_publication.html">CV & Publication</a>
-        <!-- <a href="#" class="login">ログイン</a> -->
       </div>
     </div>
   </header>
@@ -34,7 +33,7 @@
   </section>
 
   <section class="news">
-    <h2>News & Topics</h2>
+    <h2>News</h2>
     <div class="news-container">
       <ul>
         <li>MVE学会賞を受賞しました(12 April 2024)</li>
