--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     </div>
   </header>
 
-  <div class="slider">
-    <img class="slide" src="avatar-drink.png" alt="Slide 1">
-    <img class="slide" src="image2.jpg" alt="Slide 2">
-    <img class="slide" src="image3.jpg" alt="Slide 3">
+  <div class="intro">
+    <h1><strong>小関裕介/Koseki Yusuke</strong></h1>
+    <p><strong>東京大学大学院情報理工学研究科知能機械情報専攻葛岡鳴海研究室修士2年</strong></p>
+    <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, Master 2nd</strong></p>
+    <p><strong>koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
   </div>
 
   <section class="about">
@@ -44,11 +45,10 @@
         <li>東京大学の国際卓越大学院プログラム WINGS-GLAFSに採択されました(29 Sep 2023)</li>
         <li>International Conference on Human-Computer Interaction学会のLeaderboard Awardで2位になりました(28 July 2023)</li>
         <li>International Conference on Human-Computer Interaction学会で, 老人歩容アバタが歩行速度に与える影響に関する口頭発表(主著)を行いました(24 July 2023)</li>
-        <li>応用情報技術者試験に合格しました(13 Sep 2022)</li>
-        <li>42Tokyoに合格しました(13 Sep 2022)</li>
-        <li>JDLA Deep Learning for ENGINEERに合格しました(13 Sep 2022)</li>
+        <li>応用情報技術者試験に合格しました(29 Jun 2022)</li>
+        <li>42Tokyoに合格しました(15 Apr 2023)</li>
         <li>Virtual Reality学会で, 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係(主著)について, 口頭発表を行いました(13 Sep 2022)</li>
-        <li></li>
+        <li>JDLA Deep Learning for ENGINEERに合格しました(10 Mar 2022)</li>
       </ul>
     </div>
   </section>
