--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div class="intro">
     <h1><strong>小関裕介/Koseki Yusuke</strong></h1>
     <p><strong>東京大学大学院情報理工学研究科知能機械情報専攻葛岡鳴海研究室修士2年</strong></p>
-    <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, Master 2nd</strong></p>
-    <p><strong>koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
+    <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, the second year of a Master's program</strong></p>
+    <p><strong>Contact : koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
   </div>
 
   <section class="about">
