--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,6 @@
       <div class="header-left">
         <a href="index.html">Y.Koseki</a>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">Profile</a>
         <a href="cv_publication.html">CV & Publication</a>
@@ -22,8 +21,13 @@
   </header>
 
   <section class="profile">
-    <h2>Profile</h2>
-    <p>ここにプロフィール情報を記載します...</p>
+    <h2>経歴</h2>
+    <p>2019年4月 東京大学文科二類 入学</p>
+    <p>2023年3月 東京大学経済学部 卒業</p>
+    <p>2023年4月 東京大学大学院情報理工学系研究科知能機械情報専攻 入学</p>
+    <p>経営学 学士</p>
+    <h2>職歴</h2>
+    <p>2023年10月- 東京大学情報基盤センター技術補佐員</p>
   </section>
 </body>
 </html>
