--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="header-right">
         <a href="profile.html">Profile</a>
-        <a href="cv_publication.html">CV & Publication</a>
+        <a href="cv_publication.html">Publication</a>
       </div>
     </div>
   </header>
@@ -29,7 +29,7 @@
 
   <section class="about">
     <h2>Research topic & interests</h2>
-    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology</p>
+    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, micro-economics</p>
   </section>
 
   <section class="news">
