--- a/cv_publication.html
+++ b/cv_publication.html
@@ -13,7 +13,6 @@
       <div class="header-left">
         <a href="index.html">Y.Koseki</a>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="profile.html">Profile</a>
         <a href="#">CV & Publication</a>
@@ -24,26 +23,37 @@
   <section class="cv-publication">
     <h2>Publication</h2>
     <h3>論文誌(国際)</h3>
-    <p>Koseki, Y., & Amemiya, T. Being an older person: modulation of walking speed with geriatric
-      walking motion avatars. Frontiers in Virtual Reality, 2024.</p>
+    <ol>
+      <li>Koseki, Y., & Amemiya, T. Being an older person: modulation of walking speed with geriatric
+        walking motion avatars. Frontiers in Virtual Reality, 2024.</li>
+    </ol>
     <h3>口頭発表(国際)</h3>
-    <p>Koseki, Y., & Amemiya, T. Modulation of the Walking Speed by Moving Avatars with Age
-      Stereotype Stimuli. In International Conference on Human-Computer Interaction, 2023.</p>
+    <ol>
+      <li>Koseki, Y., & Amemiya, T. Modulation of the Walking Speed by Moving Avatars with Age
+        Stereotype Stimuli. In International Conference on Human-Computer Interaction, 2023.</li>
+    </ol>
     <h3>ポスター発表(国際)</h3>
-    <p>Koseki, Y., Arikawa, Y., Nakano, K., & Narumi, T. Avatars for Good Drinking: An Exploratory
-      Study of The Effects of Avatar's Body Shape on Beverage Perception. In SIGGRAPH Asia 2023, 2023.</p>
+    <ol>
+      <li>Koseki, Y., Arikawa, Y., Nakano, K., & Narumi, T. Avatars for Good Drinking: An Exploratory
+        Study of The Effects of Avatar's Body Shape on Beverage Perception. In SIGGRAPH Asia 2023, 2023.</li>
+    </ol>
     <h3>口頭発表(国内)</h3>
-    <p>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与
-      える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024 年3 月.</p>
-    <p>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本
-      VR学会大会, 2022年9月.</p>
+    <ol>
+      <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与
+        える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月.</li>
+      <li>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本
+        VR学会大会, 2022年9月.</li>
+    </ol>
     <h3>受賞・採択等</h3>
-    <p>電子情報通信学会MVE賞, IE/IMQ/MVE/AC/CQ合同研究会, 2024年4月.</p>
-    <p>令和6年度 DAAX Experience Design Student Award, 産総研人間拡張研究センター, 2024年3月.</p>
-    <p>国際卓越大学院プログラム WINGS-GLAFS 採択, 2023 年9 月.</p>
+    <ol>
+      <li>電子情報通信学会MVE賞, IE/IMQ/MVE/AC/CQ合同研究会, 2024年4月.</li>
+      <li>令和6年度 DAAX Experience Design Student Award, 産総研人間拡張研究センター, 2024年3月.</li>
+      <li>国際卓越大学院プログラム WINGS-GLAFS 採択, 2023年9月.</li>
+    </ol>
     <h3>その他</h3>
-    <p>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024 年3 月.</p>
-
+    <ol>
+      <li>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024年3月.</li>
+    </ol>
   </section>
 </body>
 </html>
