--- a/cv_publication.html
+++ b/cv_publication.html
@@ -15,7 +15,7 @@
       </div>
       <div class="header-right">
         <a href="profile.html">Profile</a>
-        <a href="#">CV & Publication</a>
+        <a href="#">Publication</a>
       </div>
     </div>
   </header>
