--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
       </div>
       <div class="header-right">
         <a href="#">Profile</a>
-        <a href="cv_publication.html">CV & Publication</a>
+        <a href="cv_publication.html">Publication</a>
       </div>
     </div>
   </header>
