--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="about">
     <h2>Research topic & interests</h2>
-    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, micro-economics</p>
+    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Micro-economics</p>
   </section>
 
   <section class="news">
