--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
   <div class="intro">
     <h1><strong>小関裕介/Koseki Yusuke</strong></h1>
-    <p><strong>東京大学大学院情報理工学研究科知能機械情報専攻葛岡鳴海研究室修士2年</strong></p>
+    <p><strong>東京大学大学院 情報理工学研究科 知能機械情報専攻 葛岡鳴海研究室 修士2年</strong></p>
     <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, the second year of a Master's program</strong></p>
     <p><strong>Contact : koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
   </div>
 
   <section class="about">
     <h2>Research topic & interests</h2>
-    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Micro-economics</p>
+    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Phychology of Aging ,Micro-economics</p>
   </section>
 
   <section class="news">
