--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,11 @@
     <p>経営学 学士</p>
     <h2>職歴</h2>
     <p>2023年10月- 東京大学情報基盤センター技術補佐員</p>
+    <h2>所属</h2>
+    <p>東京大学 葛岡鳴海研究室 修士課程学生</p>
+    <p>東京大学 雨宮研究室 技術補佐員</p>
+    <p><a href="https://www.cyber.t.u-tokyo.ac.jp/ja/members">東京大学 葛岡鳴海研究室 修士課程学生</a></p>
+    <p><a href="https://amelab.vr.u-tokyo.ac.jp/members/members">東京大学 雨宮研究室 技術補佐員</a></p>
   </section>
 </body>
 </html>
