--- a/index.html
+++ b/index.html
@@ -20,37 +20,44 @@
     </div>
   </header>
 
-  <div class="intro">
-    <h1><strong>小関裕介/Koseki Yusuke</strong></h1>
-    <p><strong>東京大学大学院 情報理工学研究科 知能機械情報専攻 葛岡鳴海研究室 修士2年</strong></p>
-    <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, the second year of a Master's program</strong></p>
-    <p><strong>Contact : koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
-  </div>
-
-  <section class="about">
-    <h2>Research topic & interests</h2>
-    <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Phychology of Aging ,Micro-economics</p>
-  </section>
-
-  <section class="news">
-    <h2>News</h2>
-    <div class="news-container">
-      <ul>
-        <li>MVE学会賞を受賞しました(12 April 2024)</li>
-        <li>Frontiers in Virtual Realityに老人プライミング効果と老人歩容アバタを用いた歩行速度の変化に関する主著論文の採録が決まりました(10 April 2024)</li>
-        <li>MVE学会で, 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響に関する口頭発表(主著)を行いました(14 Mar 2024)</li>
-        <li>日本バーチャルリアリティ学会学会誌に会議参加報告をしました(31 Mar 2024)</li>
-        <li>SIGGRAPH Asia学会で, アバタの身体サイズ/サイズ遷移が飲料の風味知覚と身体所有感に与える影響に関するポスター発表(主著)を行いました(13 Dec 2023)</li>
-        <li>東京大学の国際卓越大学院プログラム WINGS-GLAFSに採択されました(29 Sep 2023)</li>
-        <li>International Conference on Human-Computer Interaction学会のLeaderboard Awardで2位になりました(28 July 2023)</li>
-        <li>International Conference on Human-Computer Interaction学会で, 老人歩容アバタが歩行速度に与える影響に関する口頭発表(主著)を行いました(24 July 2023)</li>
-        <li>応用情報技術者試験に合格しました(29 Jun 2022)</li>
-        <li>42Tokyoに合格しました(15 Apr 2023)</li>
-        <li>Virtual Reality学会で, 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係(主著)について, 口頭発表を行いました(13 Sep 2022)</li>
-        <li>JDLA Deep Learning for ENGINEERに合格しました(10 Mar 2022)</li>
-      </ul>
+  <div class="main-container">
+    <div class="left-column">
+      <img src="kose.jpg" alt="Profile Picture">
     </div>
-  </section>
+    <div class="right-column">
+      <div class="intro">
+        <h1><strong>小関裕介/Koseki Yusuke</strong></h1>
+        <p><strong>東京大学大学院 情報理工学研究科 知能機械情報専攻 葛岡鳴海研究室 修士2年</strong></p>
+        <p><strong>Graduate School of Information Science and Technology, Kuzuoka-narumi Lab, the second year of a Master's program</strong></p>
+        <p><strong>Contact : koseki[at]cyber.t.u-tokyo.ac.jp</strong></p>
+      </div>
+
+      <section class="about">
+        <h2>Research topic & interests</h2>
+        <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Phychology of Aging ,Micro-economics</p>
+      </section>
+
+      <section class="news">
+        <h2>News</h2>
+        <div class="news-container">
+          <ul>
+            <li>MVE学会賞を受賞しました(12 April 2024)</li>
+            <li>Frontiers in Virtual Realityに老人プライミング効果と老人歩容アバタを用いた歩行速度の変化に関する主著論文の採録が決まりました(10 April 2024)</li>
+            <li>MVE学会で, 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響に関する口頭発表(主著)を行いました(14 Mar 2024)</li>
+            <li>日本バーチャルリアリティ学会学会誌に会議参加報告をしました(31 Mar 2024)</li>
+            <li>SIGGRAPH Asia学会で, アバタの身体サイズ/サイズ遷移が飲料の風味知覚と身体所有感に与える影響に関するポスター発表(主著)を行いました(13 Dec 2023)</li>
+            <li>東京大学の国際卓越大学院プログラム WINGS-GLAFSに採択されました(29 Sep 2023)</li>
+            <li>International Conference on Human-Computer Interaction学会のLeaderboard Awardで2位になりました(28 July 2023)</li>
+            <li>International Conference on Human-Computer Interaction学会で, 老人歩容アバタが歩行速度に与える影響に関する口頭発表(主著)を行いました(24 July 2023)</li>
+            <li>応用情報技術者試験に合格しました(29 Jun 2022)</li>
+            <li>42Tokyoに合格しました(15 Apr 2023)</li>
+            <li>Virtual Reality学会で, 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係(主著)について, 口頭発表を行いました(13 Sep 2022)</li>
+            <li>JDLA Deep Learning for ENGINEERに合格しました(10 Mar 2022)</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
