--- a/cv_publication.html
+++ b/cv_publication.html
@@ -55,5 +55,15 @@
       <li>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024年3月.</li>
     </ol>
   </section>
+
+  <section class="images">
+    <h2>Gallery</h2>
+    <div class="image-container">
+      <img src="mve.pdf" alt="Image 1">
+      <img src="trophy.jpg" alt="Image 2">
+      <img src="shojo.jpg" alt="Image 3">
+      <img src="ranking.jpg" alt="Image 4">
+    </div>
+  </section>
 </body>
 </html>
