--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       </div>
       <div class="header-right">
         <a href="profile.html">Profile</a>
-        <a href="cv_publication.html">Publication</a>
+        <a href="#">Publication</a>
       </div>
     </div>
   </header>
 
   <div class="main-container">
     <div class="left-column">
-      <img src="kose.jpg" alt="Profile Picture">
+      <img src="/mnt/data/スクリーンショット 2024-06-30 0.23.56.png" alt="Profile Picture">
     </div>
     <div class="right-column">
       <div class="intro">
