--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="main-container">
     <div class="left-column">
-      <img src="/mnt/data/スクリーンショット 2024-06-30 0.23.56.png" alt="Profile Picture">
+      <img src="kose.png" alt="Profile Picture">
     </div>
     <div class="right-column">
       <div class="intro">
