--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="header-right">
         <a href="profile.html">Profile</a>
-        <a href="#cv_publication">Publication</a>
+        <a href="cv_publication">Publication</a>
       </div>
     </div>
   </header>
