--- a/cv_publication.html
+++ b/cv_publication.html
@@ -39,10 +39,8 @@
     </ol>
     <h3>口頭発表(国内)</h3>
     <ol>
-      <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与
-        える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月.</li>
-      <li>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本
-        VR学会大会, 2022年9月.</li>
+      <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月.</li>
+      <li>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本VR学会大会, 2022年9月.</li>
     </ol>
     <h3>受賞・採択等</h3>
     <ol>
@@ -59,9 +57,9 @@
   <section class="images">
     <h2>Gallery</h2>
     <div class="image-container">
-      <img src="mve.pdf" alt="Image 1">
+      <!-- <img src="mve.pdf" alt="Image 1">
       <img src="trophy.jpg" alt="Image 2">
-      <img src="shojo.jpg" alt="Image 3">
+      <img src="shojo.jpg" alt="Image 3"> -->
       <img src="ranking.jpg" alt="Image 4">
     </div>
   </section>
