--- a/cv_publication.html
+++ b/cv_publication.html
@@ -21,7 +21,7 @@
   </header>
 
   <section class="cv-publication">
-    <h2>Publication</h2>
+    <h2 class="underline">Publication</h2>
     <h3>論文誌(国際)</h3>
     <ol>
       <li>Koseki, Y., & Amemiya, T. Being an older person: modulation of walking speed with geriatric
