--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <section class="news">
-        <h2>News</h2>
+        <h2>News(下にスクロールできます)</h2>
         <div class="news-container">
           <ul>
             <li>MVE学会賞を受賞しました(12 April 2024)</li>
@@ -50,7 +50,7 @@
             <li>International Conference on Human-Computer Interaction学会のLeaderboard Awardで2位になりました(28 July 2023)</li>
             <li>International Conference on Human-Computer Interaction学会で, 老人歩容アバタが歩行速度に与える影響に関する口頭発表(主著)を行いました(24 July 2023)</li>
             <li>応用情報技術者試験に合格しました(29 Jun 2022)</li>
-            <li>42Tokyoに合格しました(15 Apr 2023)</li>
+            <li><a href="https://42tokyo.jp/">42Tokyo</a>に合格しました(15 Apr 2023)</li>
             <li>Virtual Reality学会で, 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係(主著)について, 口頭発表を行いました(13 Sep 2022)</li>
             <li>JDLA Deep Learning for ENGINEERに合格しました(10 Mar 2022)</li>
           </ul>
