--- a/cv_publication.html
+++ b/cv_publication.html
@@ -47,6 +47,12 @@
       <li>電子情報通信学会MVE賞, IE/IMQ/MVE/AC/CQ合同研究会, 2024年4月.</li>
       <li><a href="https://unit.aist.go.jp/harc/daax/d_cns_hyousyou.html">令和6年度 DAAX Experience Design Student Award</a>, 産総研人間拡張研究センター, 2024年3月.</li>
       <li><a href="https://www.glafs.u-tokyo.ac.jp/">国際卓越大学院プログラム WINGS-GLAFS 採択</a>, 2023年9月.</li>
+      <li>Leaderboard Award 2nd, International Conference on Human-Computer Interaction, 2023年7月.</li>
+    </ol>
+    <h3>資格</h3>
+    <ol>
+      <li><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者</a>, 情報処理推進機構, 2023年4月.</li>
+      <li><a href="https://www.jdla.org/certificate/engineer/">JDLA Deep Learning for ENGINEER</a>, 一般社団法人日本ディープラーニング協会, 2022年2月.</li>
     </ol>
     <h3>その他</h3>
     <ol>
