--- a/cv_publication.html
+++ b/cv_publication.html
@@ -63,10 +63,10 @@
   <section class="images">
     <h2>Gallery</h2>
     <div class="image-container">
-      <img src="mve.pdf" alt="Image 1">
+      <!-- <img src="mve.pdf" alt="Image 1">
       <img src="trophy.jpg" alt="Image 2">
-      <img src="shojo.jpg" alt="Image 3">
-      <img src="ranking.jpg" alt="Image 4">
+      <img src="shojo.jpg" alt="Image 3"> -->
+      <img src="kose.jpg" alt="Image 4">
     </div>
   </section>
 </body>
