--- a/cv_publication.html
+++ b/cv_publication.html
@@ -66,7 +66,7 @@
       <!-- <img src="mve.pdf" alt="Image 1">
       <img src="trophy.jpg" alt="Image 2">
       <img src="shojo.jpg" alt="Image 3"> -->
-      <img src="ranking.png" alt="Image 4">
+      <img src="shojo.jpg" alt="Image 4">
     </div>
   </section>
 </body>
