--- a/cv_publication.html
+++ b/cv_publication.html
@@ -63,7 +63,7 @@
   <section class="images">
     <h2>Gallery</h2>
     <div class="image-container">
-      <img src="mve.pdf" alt="Image 1">
+      <img src="mve.jpg" alt="Image 1">
       <img src="trophy.JPG" alt="Image 2">
       <img src="shojo.JPG" alt="Image 3">
       <img src="ranking.PNG" alt="Image 4">
