--- a/cv_publication.html
+++ b/cv_publication.html
@@ -63,10 +63,10 @@
   <section class="images">
     <h2>Gallery</h2>
     <div class="image-container">
-      <img src="mve.jpg" alt="Image 1">
-      <img src="trophy.JPG" alt="Image 2">
-      <img src="shojo.JPG" alt="Image 3">
-      <img src="ranking.PNG" alt="Image 4">
+      <img src="mve.jpg" alt="Image 1" class="portrait">
+      <img src="trophy.JPG" alt="Image 2" class="portrait">
+      <img src="shojo.JPG" alt="Image 3" class="portrait">
+      <img src="ranking.PNG" alt="Image 4" class="landscape">
     </div>
   </section>
 </body>
