--- a/cv_publication.html
+++ b/cv_publication.html
@@ -51,12 +51,12 @@
     </ol>
     <h3>資格</h3>
     <ol>
-      <li><a href="https://www.ipa.go.jp/shiken/kubun/ap.html">応用情報技術者</a>, 情報処理推進機構, 2023年4月.</li>
-      <li><a href="https://www.jdla.org/certificate/engineer/">JDLA Deep Learning for ENGINEER</a>, 一般社団法人日本ディープラーニング協会, 2022年2月.</li>
+      <li>応用情報技術者, 情報処理推進機構, 2023年4月. [<a href="https://www.ipa.go.jp/shiken/kubun/ap.html">link</a>]</li>
+      <li>JDLA Deep Learning for ENGINEER, 一般社団法人日本ディープラーニング協会, 2022年2月. [<a href="https://www.jdla.org/certificate/engineer/">link</a>]</li>
     </ol>
     <h3>その他</h3>
     <ol>
-      <li><a href="https://vrsj.org/report/12547/">会議参加報告</a>, 日本バーチャルリアリティ学会学会誌, 2024年3月.</li>
+      <li>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024年3月. [<a href="https://vrsj.org/report/12547/">link</a>]</li>
     </ol>
   </section>
 
