--- a/cv_publication.html
+++ b/cv_publication.html
@@ -24,29 +24,29 @@
     <h2 class="underline">Publication</h2>
     <h3>論文誌(国際)</h3>
     <ol>
-      <li>Koseki, Y., & Amemiya, T. <a href="https://www.frontiersin.org/journals/virtual-reality/articles/10.3389/frvir.2024.1363043/full">Being an older person: modulation of walking speed with geriatric
-        walking motion avatars.</a> Frontiers in Virtual Reality, 2024.</li>
+      <li>Koseki, Y., & Amemiya, T. Being an older person: modulation of walking speed with geriatric
+        walking motion avatars. Frontiers in Virtual Reality, 2024. [<a href="https://www.frontiersin.org/journals/virtual-reality/articles/10.3389/frvir.2024.1363043/full">doi</a>]</li>
     </ol>
     <h3>口頭発表(国際)</h3>
     <ol>
-      <li>Koseki, Y., & Amemiya, T. <a href="https://link.springer.com/chapter/10.1007/978-3-031-48050-8_7">Modulation of the Walking Speed by Moving Avatars with Age
-        Stereotype Stimuli.</a> In International Conference on Human-Computer Interaction, 2023.</li>
+      <li>Koseki, Y., & Amemiya, T. Modulation of the Walking Speed by Moving Avatars with Age
+        Stereotype Stimuli. In International Conference on Human-Computer Interaction, 2023. [<a href="https://link.springer.com/chapter/10.1007/978-3-031-48050-8_7">doi</a>]</li>
     </ol>
     <h3>ポスター発表(国際)</h3>
     <ol>
-      <li>Koseki, Y., Arikawa, Y., Nakano, K., & Narumi, T. <a href="https://dl.acm.org/doi/abs/10.1145/3610542.3626144">Avatars for Good Drinking: An Exploratory
-        Study of The Effects of Avatar's Body Shape on Beverage Perception.</a> In SIGGRAPH Asia 2023, 2023.</li>
+      <li>Koseki, Y., Arikawa, Y., Nakano, K., & Narumi, T. Avatars for Good Drinking: An Exploratory
+        Study of The Effects of Avatar's Body Shape on Beverage Perception. In SIGGRAPH Asia 2023, 2023. [<a href="https://dl.acm.org/doi/abs/10.1145/3610542.3626144">doi</a>]</li>
     </ol>
     <h3>口頭発表(国内)</h3>
     <ol>
-      <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. <a href="https://www.ieice.org/publications/ken/summary.php?contribution_id=130016&society_cd=HCG&ken_id=MVE&year=2024&presen_date=2024-03-14&schedule_id=8099&lang=jp&expandable=4">対話者アバタの融合身体的ミラーリングが相手の印象に与える影響.</a> IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月.</li>
-      <li>小関裕介, 雨宮智浩. <a href="https://conference.vrsj.org/ac2022/program/doc/3C4-1.pdf">並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係.</a> 第27回日本VR学会大会, 2022年9月.</li>
+      <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月. [<a href="https://www.ieice.org/publications/ken/summary.php?contribution_id=130016&society_cd=HCG&ken_id=MVE&year=2024&presen_date=2024-03-14&schedule_id=8099&lang=jp&expandable=4">link</a>]</li>
+      <li>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本VR学会大会, 2022年9月. [<a href="https://conference.vrsj.org/ac2022/program/doc/3C4-1.pdf">link</a>]</li>
     </ol>
     <h3>受賞・採択等</h3>
     <ol>
       <li>電子情報通信学会MVE賞, IE/IMQ/MVE/AC/CQ合同研究会, 2024年4月.</li>
-      <li><a href="https://unit.aist.go.jp/harc/daax/d_cns_hyousyou.html">令和6年度 DAAX Experience Design Student Award</a>, 産総研人間拡張研究センター, 2024年3月.</li>
-      <li><a href="https://www.glafs.u-tokyo.ac.jp/">国際卓越大学院プログラム WINGS-GLAFS 採択</a>, 2023年9月.</li>
+      <li>令和6年度 DAAX Experience Design Student Award, 産総研人間拡張研究センター, 2024年3月. [<a href="https://unit.aist.go.jp/harc/daax/d_cns_hyousyou.html">link</a>]</li>
+      <li>国際卓越大学院プログラム WINGS-GLAFS 採択, 2023年9月. [<a href="https://www.glafs.u-tokyo.ac.jp/">link</a>]</li>
       <li>Leaderboard Award 2nd, International Conference on Human-Computer Interaction, 2023年7月.</li>
     </ol>
     <h3>資格</h3>
