--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <section class="news">
         <h2>News(下にスクロールできます)</h2>
         <div class="news-container">
-          <u
-            <li>9か国11大学の学生や若手研究者が高齢者に関するテーマで協議するIARU(International Alliance of Research Universities, 9月開催)に参加することになりました</li>l>
+          <ul>
+            <li>9か国11大学の学生や若手研究者が高齢者に関するテーマで協議するIARU(International Alliance of Research Universities, 9月開催)に参加することになりました</li>
             <li>MVE学会賞を受賞しました(12 April 2024)</li>
             <li>Frontiers in Virtual Realityに老人プライミング効果と老人歩容アバタを用いた歩行速度の変化に関する主著論文の採録が決まりました(10 April 2024)</li>
             <li>MVE学会で, 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響に関する口頭発表(主著)を行いました(14 Mar 2024)</li>
