9月の実績追加

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h2>News(下にスクロールできます)</h2>
         <div class="news-container">
           <ul>
-            <li>9か国11大学の学生や若手研究者が高齢者に関するテーマで協議するIARU(International Alliance of Research Universities, 9月開催)に参加することになりました</li>
+            <li>Oxford大学で行われたIARU/Aging Longevity and Health Initiative Research Conferenceにて参加・発表しました(2 Oct 2024)</li>
+            <li>MVE学会で, 下方視野を拡大したHMDを用いたアバタの視覚情報提示が風味知覚に与える影響の基礎検討に関する口頭発表(主著)を行いました(26 Sep 2024)</li>
+            <li>Virtual Reality学会で, 鳥アバタを用いたVR体験が昆虫食受容に与える影響(主著)について, 口頭発表を行いました(12 Sep 2024)</li>
             <li>MVE学会賞を受賞しました(12 April 2024)</li>
             <li>Frontiers in Virtual Realityに老人プライミング効果と老人歩容アバタを用いた歩行速度の変化に関する主著論文の採録が決まりました(10 April 2024)</li>
             <li>MVE学会で, 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響に関する口頭発表(主著)を行いました(14 Mar 2024)</li>
