--- a/cv_publication.html
+++ b/cv_publication.html
@@ -39,6 +39,8 @@
     </ol>
     <h3>口頭発表(国内)</h3>
     <ol>
+      <li>小関裕介, 中野萌士, 鳴海拓志. 下方視野を拡大したHMDを用いたアバタの視覚情報提示が風味知覚に与える影響の基礎検討. MVE研究会, 2024年9月. <a href="https://ken.ieice.org/ken/paper/202409264c4P/">[link]</a></li>
+      <li>小関裕介, 大野雅貴, 中野萌士, 葛岡英明, 鳴海拓志. 鳥アバタを用いたVR体験が昆虫食受容に与える影響. 第29回日本VR学会大会, 2024年9月. <a href="https://conference.vrsj.org/ac2024/program/doc/2D1-02.pdf">[link]</a></li>
       <li>小関裕介, 中野萌士, 鳴海拓志, 葛岡英明, 雨宮智浩. 対話者アバタの融合身体的ミラーリングが相手の印象に与える影響. IE/IMQ/MVE/AC/CQ 合同研究会, 2024年3月. <a href="https://www.ieice.org/publications/ken/summary.php?contribution_id=130016&society_cd=HCG&ken_id=MVE&year=2024&presen_date=2024-03-14&schedule_id=8099&lang=jp&expandable=4">[link]</a></li>
       <li>小関裕介, 雨宮智浩. 並走するバーチャルアバタによる歩行速度変調と老人プライミングの関係. 第27回日本VR学会大会, 2022年9月. <a href="https://conference.vrsj.org/ac2022/program/doc/3C4-1.pdf">[link]</a></li>
     </ol>
@@ -56,6 +58,7 @@
     </ol>
     <h3>その他</h3>
     <ol>
+      <li>学会参加・講演, IARU/Aging Longevity and Health Initiative Research Conference, 2024年10月. <a href="https://www.iaruni.org/index.php">[link]</a></li>
       <li>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024年3月. <a href="https://vrsj.org/report/12547/">[link]</a></li>
     </ol>
   </section>
