--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 
       <section class="about">
         <h2>Research topic & interests</h2>
-        <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology, Phychology of Aging ,Micro-economics</p>
+        <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology/p>
       </section>
 
       <section class="news">
         <h2>News(下にスクロールできます)</h2>
         <div class="news-container">
           <ul>
+            <li>東京大学大学院情報理工学系研究科修士課程を卒業しました(24 Mar 2025)</li>
+            <li>Augmented Humans学会でポスター発表(主著)を行いました(19 Mar 2025)</li>
+            <li>SPRING GX（博士課程学生支援）に採択されました(17 Mar 2025)</li>
             <li>Oxford大学で行われたIARU/Aging Longevity and Health Initiative Research Conferenceにて参加・発表しました(2 Oct 2024)</li>
             <li>MVE学会で, 下方視野を拡大したHMDを用いたアバタの視覚情報提示が風味知覚に与える影響の基礎検討に関する口頭発表(主著)を行いました(26 Sep 2024)</li>
             <li>Virtual Reality学会で, 鳥アバタを用いたVR体験が昆虫食受容に与える影響(主著)について, 口頭発表を行いました(12 Sep 2024)</li>
