--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <section class="about">
         <h2>Research topic & interests</h2>
-        <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology/p>
+        <p>Human Computer Interaction, Virtual Reality, Avatar, Taste perception, Geron-technology</p>
       </section>
 
       <section class="news">
