--- a/cv_publication.html
+++ b/cv_publication.html
@@ -46,6 +46,7 @@
     </ol>
     <h3>受賞・採択等</h3>
     <ol>
+      <li>国立研究開発法人科学技術振興機構 SPRING-GX 採択, 2025年3月. <a href="https://www.cis-trans.jp/spring_gx/">[link]</a></li>
       <li>電子情報通信学会MVE賞, IE/IMQ/MVE/AC/CQ合同研究会, 2024年4月.</li>
       <li>令和6年度 DAAX Experience Design Student Award, 産総研人間拡張研究センター, 2024年3月. <a href="https://unit.aist.go.jp/harc/daax/d_cns_hyousyou.html">[link]</a></li>
       <li>国際卓越大学院プログラム WINGS-GLAFS 採択, 2023年9月. <a href="https://www.glafs.u-tokyo.ac.jp/">[link]</a></li>
