--- a/cv_publication.html
+++ b/cv_publication.html
@@ -59,6 +59,7 @@
     </ol>
     <h3>その他</h3>
     <ol>
+      <li>講演, IARU Aging Longevity and Health ECR Seminar, 2025年3月. <a href="https://www.mitoyouth.com/seminar">[link]</a></li>
       <li>学会参加・講演, IARU/Aging Longevity and Health Initiative Research Conference, 2024年10月. <a href="https://www.iaruni.org/index.php">[link]</a></li>
       <li>会議参加報告, 日本バーチャルリアリティ学会学会誌, 2024年3月. <a href="https://vrsj.org/report/12547/">[link]</a></li>
     </ol>
