--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <h2>News(下にスクロールできます)</h2>
         <div class="news-container">
           <ul>
+            <li>東京大学大学院情報理工学系研究科博士課程に入学しました(1 Apr 2025)</li>
+            <li>IARU/Aging Longevity and Healthの若手研究者ネットワークにて研究発表を行いました(27 mar 2025)</li>
             <li>東京大学大学院情報理工学系研究科修士課程を卒業しました(24 Mar 2025)</li>
             <li>Augmented Humans学会でポスター発表(主著)を行いました(19 Mar 2025)</li>
             <li>SPRING GX（博士課程学生支援）に採択されました(17 Mar 2025)</li>
