--- a/cv_publication.html
+++ b/cv_publication.html
@@ -36,6 +36,7 @@
     <ol>
       <li>Koseki, Y., Arikawa, Y., Nakano, K., & Narumi, T. Avatars for Good Drinking: An Exploratory
         Study of The Effects of Avatar's Body Shape on Beverage Perception. In SIGGRAPH Asia 2023, 2023. <a href="https://dl.acm.org/doi/abs/10.1145/3610542.3626144">[doi]</a></li>
+      <li>Koseki, Y., Nakano, K., & Narumi, T., Kuzuoka, H., Amemiya, T. Co-embodied Mirroring: Preliminary Investigating the Effects of Movement Blending on Partner Impressions. Augmented Humans 2025, 2025. </a></li>  
     </ol>
     <h3>口頭発表(国内)</h3>
     <ol>
